test/files/neg/warn-inferred-pws.check
warn-inferred-pws.scala:2: warning: a type was inferred to be `Product with Serializable`; this may indicate a programming error
  def get(list: Boolean) = if (list) List(1, 2, 3) else (1, 2, 3) // warn
      ^
warn-inferred-pws.scala:6: warning: a type was inferred to be `Product with Serializable`; this may indicate a programming error
  val foo = if (true) List(1, 2) else (1, 2) // warn
      ^
warn-inferred-pws.scala:11: warning: a type was inferred to be `Product with Serializable`; this may indicate a programming error.
  val g = f((1, 2), List(1, 2)) // warn
          ^
warn-inferred-pws.scala:15: warning: a type was inferred to be `Product with Serializable`; this may indicate a programming error.
  { List(List(1, 2)) contains ((1, 2)) } // warn
                     ^
error: No warnings can be incurred under -Xfatal-warnings.
four warnings found
one error found
